overflow fix

--- a/style/homepageStyle.css
+++ b/style/homepageStyle.css
@@ -1,12 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Inria+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
 
 * {
-    overflow-x: hidden !important;
     font-family: "Inria Sans", sans-serif;
 }
 
-body {
-    margin: 0px !important;
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
 }
 
 .second-main-container {
